# ms_mestiere

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/: application.h  assets.h  cell.h  function.h  map.h  mem.h  player.h  prop.h  scene.h  types.h  world.h
include/scenes/: game_scene.h
src/: application.c  assets.c  cell.c  main.c  map.c  player.c  scene.c  world.c
src/scenes/: game_scene.c
tests/: main.c  map_tests.c
